k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: roccosada/client:latest
---
# Create the cluster Service.
# We can create a separate service or leave it just here.
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  selector: # tell the service what pods it is going to allow access to
    app: client
  type: ClusterIP # this is the default cluster kubernetes create for us. We can write it here or not
  ports:
    - name: client
      protocol: TCP
      port: 3000 # Node Service Port
      targetPort: 3000 # App running container
