k8s/event-bus-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-bus
  template:
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
        - name: event-bus
          image: roccosada/event-bus:latest
---
# Create the cluster Service.
# We can create a separate service or leave it just here.
apiVersion: v1
kind: Service
metadata:
  name: event-bus-srv
spec:
  selector: # tell the service what pods it is going to allow access to
    app: event-bus
  type: ClusterIP # this is the default cluster kubernetes create for us. We can write it here or not
  ports:
    - name: event-bus
      protocol: TCP
      port: 4005 # Node Service Port
      targetPort: 4005 # App running container
